# Subagent

./: .gitignore  COMPLETION_REPORT.md  DELIVERY_MANIFEST.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  test_integration.py  validate_tsnn_p.py
configs/: default.yaml
scripts/: run_full_pipeline_v20.py
tsnn_p_results/: tsnn_p_integration_test.json
